--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('icone-360.ico') }}" />
         <link href="{{ asset('bundles/AppT360/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css"/>
         <link href="{{ asset('bundles/AppT360/css/AdminLTE.min.css') }}" rel="stylesheet" type="text/css"/>
         <link href="{{ asset('bundles/AppT360/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css"/>
