--- a/src/App/T360Bundle/Resources/views/BasePage.html.twig
+++ b/src/App/T360Bundle/Resources/views/BasePage.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-
+    <link rel="icon" type="image/x-icon" href="{{ asset('icone-360.ico') }}" />
     <link href="{{ asset('bundles/AppT360/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('bundles/AppT360/css/T360Style.css') }}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('bundles/AppT360/css/hover-min.css') }}" rel="stylesheet" type="text/css"/>
@@ -30,7 +30,7 @@
 <header class="main-header">
 
     <!-- Logo -->
-    <a href="index2.html" class="logo"><b>Total</b>RH</a>
+    <a href="#" class="logo"><b>Total</b>RH</a>
 
     <!-- Header Navbar -->
     <nav class="navbar navbar-static-top" role="navigation">
@@ -132,6 +132,7 @@
             <li class="header">LIENS</li>
             <!-- Optionally, you can add icons to the links -->
             <li class="side-click-class"><a href="{{ path("t360evaluations") }}"><span>Evaluations</span></a><</li>
+            <li class="side-click-class"><a href="{{ path("t360evaluations") }}"><span>Total Social Barometre</span></a><</li>
             {% if is_granted('ROLE_ADMIN') %}
                 <li ><a href="{{ path("t360evaluations_for_admin") }}" class="side-click-class"><span>Remplir les grilles d'évaluations</span></a></li>
                 <li ><a href="{{ path("employees") }}" class="side-click-class"><span>Gestions des employés</span></a></li>
@@ -165,10 +166,10 @@
     <section class="content-header">
         {% block headerName %}
         {% endblock %}
-        <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Here</li>
-        </ol>
+        {#<ol class="breadcrumb">#}
+            {#<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>#}
+            {#<li class="active">Here</li>#}
+        {#</ol>#}
     </section>
 
     <!-- Main content -->
@@ -210,7 +211,7 @@
 
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2015 <a href="#">Total Tunisie</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015 <a href="#">Total Tunisie</a>. Département ressources humaines</strong> All rights reserved.
 </footer>
 
 </div>
